2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp: Fix the DivX plugin not getting
	any URIs to play on the Stage6 website

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/Makefile.am: Add a log domain for easier debugging
	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_play):
	Tell the plugin we had a button press if we don't have a URI to
	play (Closes: #504795)

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/media-player-keys/totem-media-player-keys.c:
	(impl_activate): Fix the bus name being wrong

2008-02-07  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/lirc/totem-lirc.c: (totem_lirc_to_command):
	* src/totem.c: (totem_action_remote):
	* src/totem.h: Patch from Carsten Luedtke
	<acid_man@gmx.net> to allow setting the aspect ratio using
	LIRC (Closes: #514832)

2008-02-06  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_event):
	Patch by Götz Waschk <waschk@mandriva.org> to fix the
	xine-lib build (Closes: #514391)

2008-02-05  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/properties/totem-movie-properties.c:
	(totem_movie_properties_plugin_class_init):
	* src/plugins/skipto/totem-skipto.c: (totem_skipto_class_init),
	(totem_skipto_dispose):
	* src/plugins/totem-module.c: (totem_module_finalize):
	* src/plugins/totem-plugin.c: (totem_get_plugin_paths):
	* src/plugins/totem-plugins-engine.c: (totem_plugins_engine_load):
	* src/plugins/tracker/totem-tracker-widget.c: (populate_result):
	* src/totem-fullscreen.c: (totem_fullscreen_move_popups),
	(totem_fullscreen_new), (totem_fullscreen_set_video_widget),
	(totem_fullscreen_set_parent_window), (totem_fullscreen_init),
	(totem_fullscreen_dispose), (totem_fullscreen_finalize),
	(totem_fullscreen_class_init):
	* src/totem-fullscreen.h:
	* src/totem-menu.c: (add_device_to_menu),
	(show_controls_action_callback):
	* src/totem-open-location.c: (totem_open_location_class_init),